# server/bill_segmentation/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from bill_segmentation.models.error_handle_dto import ErrorHandleDto
 from bill_segmentation.models.img_on_server_dto import ImgOnServerDto
 from bill_segmentation.models.roi_pts_dto import RoiPtsDto
 from bill_segmentation.models.roi_pts_dto_pts import RoiPtsDtoPts
