# server/bill_segmentation/models/error_handle_dto.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from bill_segmentation.models.base_model_ import Model
+from bill_segmentation import util
+
+
+class ErrorHandleDto(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """ErrorHandleDto - a model defined in OpenAPI
+
+        :param message: The message of this ErrorHandleDto.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ErrorHandleDto':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The errorHandleDto of this ErrorHandleDto.  # noqa: E501
+        :rtype: ErrorHandleDto
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self):
+        """Gets the message of this ErrorHandleDto.
+
+
+        :return: The message of this ErrorHandleDto.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message):
+        """Sets the message of this ErrorHandleDto.
+
+
+        :param message: The message of this ErrorHandleDto.
+        :type message: str
+        """
+
+        self._message = message
